--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-haptic-feedback": "^1.11.0",
     "react-native-location": "^2.5.0",
+    "react-native-permissions": "^3.2.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-redash": "^16.1.1",
     "react-native-safe-area-context": "^3.2.0",
