--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-svg": "^12.1.1",
-    "react-native-svg-animations": "^0.2.6"
+    "react-native-svg-animations": "^0.2.6",
+    "react-native-system-setting": "^1.7.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
